<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group>
        <item
            android:id="@+id/app_bar_settings"
            android:icon="@drawable/ic_baseline_settings_24"
            android:title="@string/settings"
            app:showAsAction="ifRoom"/>

        <item
            android:id="@+id/app_bar_shared_fragment"
            android:icon="@drawable/ic_baseline_photo_library_24"
            android:title="@string/test_fragment_1"
            app:showAsAction="ifRoom"/>

        <item
            android:id="@+id/app_bar_animation_fragment"
            android:icon="@drawable/ic_baseline_layers_24"
            android:title="@string/animation_fragment"
            app:showAsAction="ifRoom"/>

        <item
            android:id="@+id/app_bar_rx_fragment"
            android:icon="@drawable/ic_baseline_settings_24"
            android:title="@string/rx_fragment"
            app:showAsAction="ifRoom"/>

        <item
            android:id="@+id/app_bar_cicerone_example"
            android:icon="@drawable/ic_baseline_settings_24"
            android:title="@string/cicerone_example"
            app:showAsAction="ifRoom"/>

        <item
            android:id="@+id/app_bar_tests"
            android:icon="@drawable/ic_baseline_settings_24"
            android:title="@string/start_tests"
            app:showAsAction="ifRoom"/>

        <item
            android:id="@+id/app_bar_shimmering_example"
            android:icon="@drawable/ic_baseline_settings_24"
            android:title="@string/shimmering_example"
            app:showAsAction="ifRoom"/>

        <item
            android:id="@+id/app_bar_paginating_example"
            android:icon="@drawable/ic_baseline_settings_24"
            android:title="@string/paginating_example"
            app:showAsAction="ifRoom"/>
    </group>
</menu>