<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:ignore="Autofill">
    <data>
        <variable
            name="calculationInfo"
            type="com.example.melearning.CalculationHistoryDb.CalculationInfo" />
    </data>

<LinearLayout
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="60dp"
    android:background="@drawable/small_rect"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    android:paddingTop="2dp"
    android:paddingBottom="2dp">

    <EditText
        style="@style/HistoryItemTextStyle"
        android:id="@+id/percentTV"
        android:hint="@string/percent"
        android:text="@{Double.toString(calculationInfo.percent)}"/>

    <EditText
        style="@style/HistoryItemTextStyle"
        android:id="@+id/startSumTV"
        android:hint="@string/start_sum"
        android:text="@{Double.toString(calculationInfo.initial)}" />

    <EditText
        style="@style/HistoryItemTextStyle"
        android:id="@+id/periodsTV"
        android:hint="@string/periods"
        android:text="@{Double.toString(calculationInfo.periods)}" />

    <EditText
        style="@style/HistoryItemTextStyle"
        android:id="@+id/incomeTV"
        android:hint="@string/income"
        android:text="@{Double.toString(calculationInfo.income)}" />

    <com.example.custom_ui.CustomAnimatedImageButton
        android:id="@+id/history_item_apply_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:src="@drawable/ic_baseline_settings_backup_restore_24"
        app:pressedColor="@color/colorButtonHistoryUploadPressed"
        app:defaultColor="@color/colorButtonHistoryUploadNormal"/>

    <com.example.custom_ui.CustomAnimatedImageButton
        android:id="@+id/history_item_delete_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:src="@drawable/ic_baseline_close_24"
        app:defaultColor="@color/colorButtonHistoryUploadNormal"
        app:pressedColor="@color/colorButtonHistoryUploadPressed" />
</LinearLayout>
</layout>